--- a/practice.html
+++ b/practice.html
@@ -55,12 +55,29 @@
     }
 
     .play-area {
-        position: absolute;
         border: 2px solid red;
         bottom: 0;
         width: 100vw;
     }
+    .seekbar{
+        margin: 10px;
+    }
+    .line{
+        position: relative;
+        border: 1px solid white;
+        width: 40vw;
+        height: 5px;
+        margin: auto;
+        border-radius: 10px;
 
+    }
+.circle{
+    position: absolute;
+    border: 3px solid white;
+    width: 5px;
+    border-radius: 20px;
+    
+}
     .buttons {
         display: flex;
         justify-content: center;
@@ -85,11 +102,19 @@
             <img class="invert" src="img/play.svg" alt="">
             <img src="img/next.svg" alt="">
         </div>
+        <div class="seekbar">
+            <div class="line"><div class="circle"></div></div>
+            
+        </div>
     </div>
     <script>
         let audio=new Audio();
 
         let playmusic=(track)=>{
+
+            audio.src=track;
+            audio.play();
+
 
         } ;
                console.log('Starting JS');
@@ -127,7 +152,7 @@
             Array.from(document.getElementsByTagName('li')).forEach((e) => {
 
                 e.addEventListener('click', () => {
-                    console.log(e.querySelector('.sname').innerHTML);
+                   playmusic("music/sidhu/"+e.querySelector('.sname').innerHTML);
 
                 })
 
